force-app/main/default/objects/Brackets_Team__c/Brackets_Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>