force-app/main/default/objects/Brackets_Team__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Team full description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>