force-app/main/default/objects/Brackets_Team__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <inlineHelpText>Team ranking</inlineHelpText>
    <label>Rank</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>