force-app/main/default/objects/Brackets_Team__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <inlineHelpText
    >Short name (max 9 chars) to show on predictions tree</inlineHelpText>
    <label>Short Name</label>
    <length>9</length>
    <type>Text</type>
</CustomField>