force-app/main/default/objects/Brackets_Team__c/validationRules/RankGreaterOrEqualThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>RankGreaterOrEqualThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Rank__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Rank__c</errorDisplayField>
    <errorMessage>This value must be greater or equal than zero.</errorMessage>
</ValidationRule>